Fixed text wrapping

--- a/client/src/components/hamburger/HamburgerMenu.css
+++ b/client/src/components/hamburger/HamburgerMenu.css
@@ -2,7 +2,6 @@
   position: fixed;
   right: 0;
   top: 0;
-  width: 50vw;
   height: 100vh;
   z-index: 1000;
   background-color: rgb(20, 20, 20);
